Ensure correct z-index layering for cm-modal & cm-dropdown

--- a/src/components/cm-dropdown/cm-dropdown.scss
+++ b/src/components/cm-dropdown/cm-dropdown.scss
@@ -1,7 +1,7 @@
 :host {
 	display: inline-grid;
 	position: relative;
-	z-index: 1000;
+	z-index: 100;
 }
 
 .container {
