--- a/src/components/cm-modal/cm-modal.scss
+++ b/src/components/cm-modal/cm-modal.scss
@@ -7,7 +7,7 @@
 	justify-content: center;
 
 	position: fixed;
-	z-index: 999;
+	z-index: 9999;
 
 	top: 0px;
 	left: 0px;
